--- a/koa/public/index.html
+++ b/koa/public/index.html
@@ -28,6 +28,7 @@
     <li><a href="/xml">xml</a></li>
     <li><a href="/throws">异常</a></li>
     <li><a href="/404">404</a></li>
+    <li><a href="/500">500</a></li>
   </ul>
 </body>
 </html>
